--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- Dex Screener Logo -->
                 <a href="https://dexscreener.com/solana/3bjdxkvycuvua1ih6mecvnmsab6zhnjbh8fo1cl2blue" target="_blank">
                     <div class="dex-logo-circular">
-                        <img src="icons/dexscreener-icons-only-white.PNG" alt="Dex Screener Logo" class="dex-logo">
+                        <img src="./icons/dexscreener-icons-only-white.png" alt="Dex Screener Logo" class="dex-logo">
                     </div>
                 </a>
             
